--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div id="app">
     </div>
     <!-- built files will be auto injected -->
-    <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=q94UM9A7kt6T105bvtoPWV5zzdiqWlGu"></script>
+    <script type="text/javascript" src="https://api.map.baidu.com/api?v=2.0&ak=q94UM9A7kt6T105bvtoPWV5zzdiqWlGu"></script>
     <script>
         var imgs = document.getElementsByTagName('img');
 
