--- a/index.html
+++ b/index.html
@@ -26,16 +26,16 @@
     <!-- built files will be auto injected -->
     <script type="text/javascript" src="https://api.map.baidu.com/api?v=2.0&ak=q94UM9A7kt6T105bvtoPWV5zzdiqWlGu"></script>
     <script>
-        var imgs = document.getElementsByTagName('img');
+        // var imgs = document.getElementsByTagName('img');
 
-        if (imgs) {
-            for(var i in imgs)
-            {   
-                var img = imgs[i];
-                img.style.width='100%';
-                img.style.height='auto';
-            }
-        }
+        // if (imgs) {
+        //     for(var i in imgs)
+        //     {   
+        //         var img = imgs[i];
+        //         img.style.width='100%';
+        //         img.style.height='auto';
+        //     }
+        // }
     </script>
   </body>
 </html>
